[tool.poetry]
name = "repl_nix_mamaybeo-2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.1.0"
colorama = "^0.4.6"
Flask = "^2.2.2"
"discord.js" = "^1.0.7"
nodejs = "^0.1.1"
golang = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
